# modav_core

./: .gitignore  Cargo.toml  README.md  todo.md
benches/: sheet_impl.rs
benches/samples/: desktop.ini
benches/samples/fields/: field_test_high.csv  field_test_low.csv  field_test_mid.csv
benches/samples/records/: record_test_low.csv  record_test_mid.csv
benches/samples/types/: type_test_mixed.csv  type_test_text.csv
docs/: sheet.md
dummies/csv/: air2.csv  alter.csv  flexible.csv  headless.csv  infer.csv  invalid1.csv  invalid2.csv  stacked.csv  stacked_neg.csv  transpose1.csv
proptest-regressions/repr/: col_sheet.txt
src/: lib.rs  models.rs  repr.rs
src/models/: bar.rs  common.rs  line.rs  stacked_bar.rs
src/repr/: arrow.rs  col_sheet.rs  config.rs  csv.rs  sheet.rs
src/repr/arrow/: arraybool.rs  arrayf32.rs  arrayf64.rs  arrayi32.rs  arrayisize.rs  arraytext.rs  arrayu32.rs  arrayusize.rs  union.rs  utils.rs
src/repr/col_sheet/: arraybool.rs  arrayf32.rs  arrayf64.rs  arrayi32.rs  arrayisize.rs  arraytext.rs  arrayu32.rs  arrayusize.rs  col_tests.rs  utils.rs
src/repr/sheet/: builders.rs  error.rs  tests.rs  utils.rs
src/traits/: line.rs
