[package]
name = "modav_core"
version = "0.1.0"
edition = "2021"
description = "Backend for the Modav project"
license = "MIT"
repository = "https://github.com/EmmanuelDodoo/modav_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
