[package]
name = "modav_core"
version = "0.2.0"
edition = "2021"
description = "Backend for the Modav project"
license = "MIT"
repository = "https://github.com/EmmanuelDodoo/modav_core"

[dependencies]
csv = "1.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sheet_impl"
harness = false

[features]
arrow = []
